<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Minesweeper</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_difficulty">Change Difficulty</string>
    <string name="menu_view_highscores">View Highscores</string>
    <string name="menu_register_win">Register your name for this win</string>
    <string name="title_activity_main">Minesweeper</string>
    <string name="content_description_switch_click_mode_button">switch click mode</string>
    <string name="content_description_new_game_button">start a new game</string>
    <string name="title_game_settings">Game Settings</string>
    <string name="pref_game_difficulty">Difficulty</string>
    <string name="pref_game_difficulty_easy">Easy</string>
    <string name="pref_game_difficulty_medium">Medium</string>
    <string name="pref_game_difficulty_hard">Hard</string>
    <string-array name="pref_game_difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="dialog_new_highscore_title">New Highscore!</string>
    <string name="dialog_new_highscore_message">Your win is a new highscore. Please enter your name below: </string>
    <string name="dialog_highsores_title">Highscores (in milliseconds)</string>

</resources>