<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:visible="false"/>

    <group
        android:id="@+id/menu_change_difficulty"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_change_difficulty" >
        <item
            android:id="@+id/menu_difficulty_easy"
            android:title="@string/pref_game_difficulty_easy"/>
        <item
            android:id="@+id/menu_difficulty_medium"
            android:title="@string/pref_game_difficulty_medium"/>
        <item
            android:id="@+id/menu_difficulty_hard"
            android:title="@string/pref_game_difficulty_hard"/>
    </group>

    <item
        android:id="@+id/menu_view_highscores"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_view_highscores"/>

</menu>