<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dip" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pref_game_difficulty_easy"
            android:textSize="26sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp" >

            <TextView
                android:id="@+id/easyHighscoreNameView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/easyHighscoreTimeView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pref_game_difficulty_medium"
            android:textSize="26sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp" >

            <TextView
                android:id="@+id/mediumHighscoreNameView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mediumHighscoreTimeView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pref_game_difficulty_hard"
            android:textSize="26sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="6dp" >

            <TextView
                android:id="@+id/hardHighscoreNameView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hardHighscoreTimeView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</ScrollView>